# sphinxience

./: .gitignore  README.md  pyproject.toml  setup.py
sphinxience/: __init__.py  collapse.py  theme.conf
sphinxience.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sphinxience/static/: sphinxience-theme.css  sphinxience.css
tests/: test_sphinxience.py
