[tool.poetry]
name = "sphinxience"
version = "0.1.0"
description = "A Sphinx extension to assist in publishing scientific writing in either HTML or PDF."
authors = ["Bram Geron <bram@bram.xyz>"]

[tool.poetry.dependencies]
python = "^3.0"
Sphinx = "~1.7"

[tool.poetry.dev-dependencies]
# pytest = "^3.0"


